fixed width on mobile

--- a/src/components/modules/Tasks/Filter/style.css
+++ b/src/components/modules/Tasks/Filter/style.css
@@ -35,4 +35,7 @@
     .search .search-icon:before {
         display: none;
     }
+    .search {
+        padding: 0 1rem;
+    }
 }
